# rust-imghdr

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  appveyor.yml
benches/: images.rs
examples/: what.rs
src/: lib.rs  patterns.rs  std_ext.rs
tests/: mod.rs
tests/images/: example.bgp  example.exr  example.flif  example.hdr  example.pbm  example.pgm  example.ppm  example.rgb  example.tiff  example.xbm  not-a-image.txt
