[package]
name = "imghdr"
version = "0.1.2"
authors = ["svartalf <self@svartalf.info>"]
description = "Library that determines the type of image contained in a file or byte stream."
documentation = "https://svartalf.github.io/rust-imghdr/imghdr/index.html"
keywords = ["image", "gif", "jpeg", "png", "webp"]
repository = "https://github.com/svartalf/rust-imghdr"
license = "MIT"

[dependencies]
clippy = { version = "0.0.79", optional = true }
